--- a/Report.Rmd
+++ b/Report.Rmd
@@ -33,45 +33,74 @@ attach(data)
 ## Univariate analysis
 
 ```{r summary, echo=FALSE}
- summary(data)
+# Assuming 'data' is your dataset
+
+# Extract numerical and categorical features
+numerical_features <- sapply(data, is.numeric)
+categorical_features <- sapply(data, function(x) is.factor(x) | is.character(x))
+
+# Subset data based on feature types
+numerical_data <- data[, numerical_features]
+categorical_data <- data[, categorical_features]
+
+summary(numerical_data)
 ```
 ### Numerical features
 
-In order to perform the univariate analysis for numerical features (here the number of ale beer houses per 100k per county, the number of public school attendants per 100k per county and the number of public whorship per 100k per county, we computed informations about the center of each distribution (the mean and the median), and about the spread (with the minimum and maximum value as well as the lower percentile 25 and the upper percentile 75).
+In order to perform the univariate analysis for numerical predictors (here the number of ale beer houses per 100k per county, the number of public school attendants per 100k per county and the number of public whorship per 100k per county), we computed informations about the center of each distribution (the mean and the median), and about the spread (with the minimum and maximum value as well as the lower percentile 25 and the upper percentile 75).
 
 Ajouter Standard deviation (SD), Interquartile range (IQR), Median Absolute Deviation (MAD)
 
-While the mean is very sensitive to outliers, the median is not. Thus by comparing the two, we can have insights on the presence of outliers. We can observe that the mean and the median are quite similar relative to the spread for all four numerical features, infering against the presence of outliers.
+While the mean is very sensitive to outliers, the median is not. Thus by comparing the two, we can have insights on the presence of outliers. We can observe that the mean and the median are quite similar relative to the spread for all three numerical features, infering against the presence of outliers.
 We can assert this by computing the boxplots of the numerical features (See figure below) and observe the absence of outliers except maybe for one suspected outlier in the distribution of school attendants per county. 
 
 In order to have a visual summary of the distributions, boxplots and histograms are displayed below.
 
-```{r boxplots1, echo=FALSE}
+```{r boxplots1, include=FALSE}
 data$criminals_per_100k <- as.integer(data$criminals_per_100k)
-par(mfrow=c(1,4))
-boxplot(criminals_per_100k, main = "Criminals per county")
-boxplot(ale_beer_houses_per_100k, main = "Beer Houses per county")
-boxplot(attendants_public_school_per_100k, main = paste("School attendants" , "\n", "per county"))
-boxplot(attendants_public_worship_per_100k, main = paste("Worship attendants", "\n", "per county"))
+
+# Creating a single boxplot with different colors for each feature
+boxplot(ale_beer_houses_per_100k, 
+        attendants_public_school_per_100k, 
+        attendants_public_worship_per_100k, 
+        main = "Comparison of Various Features per County",
+        names = c("Beer Houses", "School Attendants", "Worship Attendants"),
+        ylab = "Count per 100k")
+
 ```
 
-```{r histograms1, echo=FALSE}
-par(mfrow=c(1,4))
-hist(criminals_per_100k, breaks=12, main = paste("Nb Criminals", "\n", "per county"))
+```{r histograms1, include=FALSE}
+par(mfrow=c(1,3))
 hist(ale_beer_houses_per_100k, breaks=12, main = paste("Nb Beer Houses" , "\n", "per county"))
 hist(attendants_public_school_per_100k, breaks=12, main = paste("Nb School attendants" , "\n", "per county"))
 hist(attendants_public_worship_per_100k, breaks=12, main = paste("Nb Worship attendants", "\n", "per county"))
+hist(criminals_per_100k, breaks=12, main = paste("Nb Criminals", "\n", "per county"))
+```
+```{r histograms2, include=FALSE}
+library(packHV)
+hist_boxplot(criminals_per_100k,freq=FALSE,density=TRUE, breaks=20)
+```
+```{r boxplots2, echo=FALSE}
+layout(matrix(c(1, 1, 2), nrow = 1), widths = c(1.25, 1))
+
+# Creating a single boxplot with different colors for each feature
+boxplot(ale_beer_houses_per_100k, 
+        attendants_public_school_per_100k, 
+        attendants_public_worship_per_100k, 
+        main = "Comparison of Various Features per County",
+        names = c("Beer Houses", "School Attendants", "Worship Attendants"),
+        ylab = "Count per 100k")
+hist_boxplot(criminals_per_100k,freq=FALSE,density=TRUE, breaks=20)
 ```
 
-
-We can observe on both the boxplots and the histograms that the distributions are quite symmetric, while being slightly left-skewed for the Beer Houses and slightly right-skewed for the Public School attendants. 
+We can observe on both the boxplots and the histograms that the distributions are quite symmetric, while being slightly left-skewed for the Beer Houses, and the Worship attendants and slightly right-skewed for the Public School attendants. 
 
 Since values are discrete and above 0 for all three numerical features, we can think that they belong to the Poisson distribution
 
 #### Comparison with Poisson distribution
 
 
-```{r qqplots1, echo=FALSE}
+```{r qqplots1, include=FALSE}
 par(mfrow=c(1,4)) #plt=c(0.2, 0.8, 0.2, 0.8))
 qqplot(rpois(n = length(criminals_per_100k), lambda = mean(criminals_per_100k)), criminals_per_100k, xlab = "theoretical poisson")
 qqplot(rpois(n = length(ale_beer_houses_per_100k), lambda = mean(ale_beer_houses_per_100k)), ale_beer_houses_per_100k, xlab = "theoretical poisson")
@@ -80,7 +109,7 @@ qqplot(rpois(n = length(attendants_public_worship_per_100k), lambda = mean(atten
 ```
 Scales do not correspond exept maybe  criminals, so they are not Poisson distribued ?
 
-```{r qqplots criminals, echo=FALSE}
+```{r qqplots criminals, include=FALSE}
 par(pty="s")
 xlim = c(min(criminals_per_100k), max(criminals_per_100k))
 qqplot(rpois(n = length(criminals_per_100k), lambda = mean(criminals_per_100k)), criminals_per_100k, xlab = "theoretical poisson",xlim = xlim, ylim = xlim)
@@ -100,20 +129,112 @@ str(data)
 attach(data)
 ```
 
-```{r qqplots normal1, echo=FALSE}
+```{r qqplots normal1, include=FALSE}
 par(mfrow=c(1,2))
 qqnorm(scaled_criminals_per_100k, main = "Normal QQ plot for criminals")
 qqline(scaled_criminals_per_100k)
 qqnorm(scaled_ale_beer_houses_per_100k, main = "Normal QQ plot for beer houses")
 qqline(scaled_ale_beer_houses_per_100k)
 ```
-```{r qqplots normal2, echo=FALSE}
+```{r qqplots normal2, include=FALSE}
 par(mfrow=c(1,2))
 qqnorm(scaled_attendants_public_school_per_100k, main="Normal QQ plot - school attendants")
 qqline(scaled_attendants_public_school_per_100k)
 qqnorm(scaled_attendants_public_worship_per_100k, main = "Normal QQ plot -  worship attendants")
 qqline(scaled_attendants_public_school_per_100k)
 ```
+### Categorical features
 
+```{r heatmap, echo=FALSE}
+#library(gplots)
 
+cont_table = table(data$region_name, data$region_code)
+# Convert the table to a matrix
+cont_matrix <- as.matrix(cont_table)
 
+colors <- colorRampPalette(c("lightyellow", "blue"))(100)
+
+# Create the heatmap
+heatmap(cont_matrix, 
+        col = colors, 
+        scale = "none",  # To prevent scaling of values
+        Rowv = NA,       # To suppress row dendrogram
+        Colv = NA,       # To suppress column dendrogram
+        margins = c(5, 5))  # Set margins
+
+# Add a color key
+legend("bottomleft", legend = c("0", "Above 0"), fill = c("lightyellow", "blue"), bty = "n")
+
+```
+Each region name corresponds to a region code.
+We have to replace the region_code "1" of South Eastern to factor "9"
+
+```{r summary2, echo=FALSE}
+data$region_code <- factor(data$region_code, levels = c(levels(data$region_code), "9"))
+data[data$region_name == "South Eastern", "region_code"] <- factor("9")
+
+categorical_features <- sapply(data, function(x) is.factor(x) | is.character(x))
+categorical_data <- data[, categorical_features]
+summary(categorical_data)
+```
+## Bivariate analysis
+
+```{r bivariate boxplot, echo=FALSE}
+factor_colors <- c("red", "blue", "green", "orange", "purple", "yellow", "pink", "cyan") # , "magenta")
+
+# Order region codes by median value
+ordered_region <- names(sort(tapply(criminals_per_100k, region_code, median)))
+
+# Create boxplots ordered by median
+boxplot(criminals_per_100k ~ factor(region_code, levels = ordered_region), 
+        main = "Criminals per 100k by Region Code",
+        col = factor_colors,
+        xlab = "Region Code",
+        ylab = "Criminals per 100k")
+
+```
+
+```{r correlation, include=FALSE, warning=FALSE}
+# Scatter plot of pairwise correlation between the three predictor variables:
+
+# Selecting the predictor variables
+predictor_vars <- data.frame(
+  ale_beer_houses_per_100k,
+  attendants_public_school_per_100k,
+  attendants_public_worship_per_100k
+)
+
+# Creating the scatterplot matrix
+pairs(predictor_vars, 
+      main = "Pairwise Scatterplot of Predictor Variables")
+
+```
+
+```{r correlation2, include=FALSE, warning=FALSE}
+# Customize upper panel
+upper.panel<-function(x, y){
+  points(x,y)
+  r <- round(cor(x, y), digits=2)
+  txt <- paste0("R = ", r)
+  usr <- par("usr"); on.exit(par(usr))
+  par(usr = c(0, 1, 0, 1))
+  text(0.5, 0.9, txt)
+}
+pairs(predictor_vars, lower.panel = NULL, 
+      upper.panel = upper.panel)
+
+```
+```{r correlation3, echo=FALSE, warning=FALSE}
+# Customize upper panel
+upper.panel<-function(x, y){
+  points(x,y, pch=19, col=factor_colors[data$region_code])
+  r <- round(cor(x, y), digits=2)
+  txt <- paste0("R = ", r)
+  usr <- par("usr"); on.exit(par(usr))
+  par(usr = c(0, 1, 0, 1))
+  text(0.5, 0.9, txt)
+}
+pairs(data[,5:7], lower.panel = NULL, 
+      upper.panel = upper.panel)
+
+```
