--- a/Report.Rmd
+++ b/Report.Rmd
@@ -100,7 +100,7 @@ Next, to better visualize the response variable of interest, i.e. the number of 
 
 
 ```{r bivariate boxplot, echo=FALSE}
-factor_colors <- c("red", "blue", "green", "orange", "purple", "yellow", "pink", "magenta", "cyan")
+factor_colors <- c("red", "cyan", "magenta", "orange", "purple", "yellow", "pink", "green", "blue")
 
 # Order region codes by median value
 ordered_region <- names(sort(tapply(criminals_per_100k, region_code, median)))
@@ -113,20 +113,20 @@ boxplot(criminals_per_100k ~ factor(region_code, levels = ordered_region),
         ylab = "Criminals per 100k")
 
 ```
-```{r dist,echo=False}
-factor_colors <- c("cyan", "red")
+```{r dist,echo=FALSE}
+factor_colors <- c("blue", "red")
 subset_data <- data[data$region_code %in% c(factor("4"), factor("8")), ]
 subset_data$region_code <- factor(subset_data$region_code, levels = c(factor("4"), factor("8")))
 
 par(mfrow=c(1,3))
-boxplot(subset_data$ale_beer_houses_per_100k ~ subset_data$region_code, main = "", col = factor_colors)
-boxplot(subset_data$attendants_public_school_per_100k ~ subset_data$region_code, main = "", col = factor_colors)
-boxplot(subset_data$attendants_public_worship_per_100k ~ subset_data$region_code, main = "", col = factor_colors)
+boxplot(subset_data$ale_beer_houses_per_100k ~ subset_data$region_code, main = "", col = factor_colors, xlab="Region code")
+boxplot(subset_data$attendants_public_school_per_100k ~ subset_data$region_code, main = "", col = factor_colors, xlab = "Region code")
+boxplot(subset_data$attendants_public_worship_per_100k ~ subset_data$region_code, main = "", col = factor_colors, xlab ="Region code")
 ```
 
 
 ```{r correlation3, echo=FALSE, warning=FALSE}
-factor_colors <- c("red", "blue", "green", "orange", "purple", "yellow", "pink", "magenta", "cyan")
+factor_colors <- c("pink", "purple", "yellow", "orange", "blue", "magenta", "green", "cyan", "red")
 # Customize upper panel
 upper.panel<-function(x, y){
   points(x,y, pch=19, col=factor_colors[data$region_code])
@@ -140,4 +140,10 @@ pairs(data[,5:7], lower.panel = NULL,
       upper.panel = upper.panel)
 
 ```
+```{r test, include=FALSE}
 
+plot(criminals_per_100k~attendants_public_worship_per_100k)
+plot(criminals_per_100k~ale_beer_houses_per_100k)
+print(factor_colors[data$region_code])
+print(data)
+```
