--- a/Report.Rmd
+++ b/Report.Rmd
@@ -4,36 +4,32 @@ author: "Sander Miesen, Gaelle Verdon, Emma Boehly, Constance de Trogoff"
 date: "`r Sys.Date()`"
 output: pdf_document
 ---
-
 ```{r import, include=FALSE}
+ #knitr::opts_chunk$set(fig.width=12, fig.height=8) 
  load("projectData.RData")
 ```
-
 # Introduction
 
 Investigating the causes of crime is a complicated task. Indeed, many external factors, such as civil wars and worker strikes could influence any region’s crime rates drastically, and these factors are hard to control for. Our dataset, collected by John Clay between 1849 and 1853, has the particularity of having very few of those disturbances as there were, in his own words, “no political or social excitement [and] no cessation of the employment”. Additionally, in 1851 there was a Census, thus making the recording of the number of inhabitants as accurate as possible. These two factors make this an ideal case study, controlling for many external variables.
 
 In this report, we aim to investigate how counties’ number of criminals per 100’000 inhabitants are affected by the number of ale and beer houses per 100’000 inhabitants, as well as the number of people attending at school per 10’000 inhabitants and the number of people attending at public worship per 2’000 inhabitants. These variables are interesting as they relate to three more general socio-cultural themes which often come up when talking about crime, namely drunkenness, education and religion. Through the running of regression models, we hope to find significant relationships between the variables and the crime rate, which could eventually help set up measures to decrease it.
 
-
 # EDA
 
-```{r str, echo=FALSE}
+```{r str, include=FALSE}
  str(data)
 ```
-
-(We could observe that Criminals per 100k are considered as character although they are discrete data. Thus we converted them to integer.
-Furthermore, region_name and region_code were identified as characters although they are factors. Thus we converted them to factors.)
 
 ```{r convert, include=FALSE}
 data$criminals_per_100k <- as.integer(data$criminals_per_100k)
 data$region_code <- as.factor(data$region_code)
 data$region_name <- as.factor(data$region_name)
-str(data)
 attach(data)
 ```
 
-To start our data exploration, we first performed a univariate data analysis of the predictors and of the response variable of interest meaning the number of criminals per 100k per county. We have 3 numerical features : the number of Ale beer houses per 100k per county, the of public school attendants per 100k per county, and the number of public worship attendants per 100k per county, and 3 categorical features : the county names, the region names and the region codes. By observing the data, we could notice that each sample corresponds to a different county name and thus we ignored this last feature for the following of our analysis. We could also remark that each region name corresponds to a region code, except for "South Midland" which had the same region code as "South Eastern". We thus replaced the region_code "1" of South Eastern to factor "0". Proportions of categorical features are indicated in Table 1. (Faire un tableau latex)
+To start our data exploration, we first performed a univariate data analysis of the predictors and of the response variable of interest meaning the number of criminals per 100k per county. We have 3 numerical features : the number of Ale beer houses per 100k per county, the of public school attendants per 10k per county, and the number of public worship attendants per 2k per county, and 3 categorical features : the county names, the region names and the region codes. By observing the data, we could notice that each sample corresponds to a different county name and thus we ignored this last feature for the following of our analysis. We could also remark that each region name corresponds to a region code, except for South Midland which had the same region code as South Eastern. We thus replaced the region_code "1" of South Eastern to factor "0". Occurences of categorical features are indicated in Table 1. 
+
+Regarding the three numerical predictors, we first computed information about the center of their distribution (the mean and the median), and about the spread (with the minimum and maximum value, the lower percentile 25 and the upper percentile 75 as well as the standard deviations) which are displayed in Table 2. While the mean is very sensitive to outliers, the median is not. Thus by comparing the two, we can have insights on the presence of outliers. We can observe that the mean and the median are quite similar relative to the spread for all three numerical features, infering against the presence of outliers. In order to have a visual summary of the distributions, boxplot of the predictors are shown in Figure 1. They appear to be quite symmetric, while being slightly left-skewed for the Beer Houses, and the Worship attendants and slightly right-skewed for the Public School attendants. 
 
 ```{r heatmap, include=FALSE}
 
@@ -56,7 +52,7 @@ legend("bottomleft", legend = c("0", "Above 0"), fill = c("lightyellow", "blue")
 
 ```
 
-```{r summary2, echo=FALSE}
+```{r summary2, include=FALSE}
 data$region_code <- factor(data$region_code, levels = c(levels(data$region_code), "0"))
 data[data$region_name == "South Eastern", "region_code"] <- factor("0")
 attach(data)
@@ -66,11 +62,21 @@ categorical_data <- data[, categorical_features]
 
 summary(categorical_data)
 ```
+|  Region name  | Occurence | Region code | Occurence |
+| ------------- | --------- | ----------- | --------- |
+| South Midland |     7     |      1      |     7     |
+| West Midland  |     7     |      4      |     7     |
+| South Eastern |     6     |      0      |     6     |
+| North Midland |     5     |      3      |     5     |
+| South Western |     5     |      5      |     5     |
+| Northern      |     4     |      8      |     4     |
+| Eastern       |     3     |      2      |     3     |
+| North Western |     2     |      6      |     2     |
+| York          |     1     |      7      |     1     |
 
-We first computed informations about the center of each numerical predictors distribution (the mean and the median), and about the spread (with the minimum and maximum value, the lower percentile 25 and the upper percentile 75 as well as the standard deviations). Results are displayed in Table 2.
+*Table 1: Occurence of the two categorical features of interest : Region name and Region code *
 
-Faire un tableau latex avec les données suivantes en rajoutant Standard deviation (SD), Interquartile range (IQR), Median Absolute Deviation (MAD)
-```{r summary, echo=FALSE}
+```{r summary, include=FALSE}
 # Assuming 'data' is your dataset
 
 # Extract numerical features and corresponding data
@@ -78,28 +84,46 @@ numerical_features <- sapply(data, is.numeric)
 numerical_data <- data[, numerical_features]
 
 summary(numerical_data)
+sd(numerical_data$ale_beer_houses_per_100k)
+sd(numerical_data$attendants_public_school_per_10k)
+sd(numerical_data$attendants_public_worship_per_2k)
+```
+|               | Ale/Beer houses| School Attendants | Worship Attendants |
+| ------------- | -------------- | ----------------- | ------------------ |
+| Min           |  87.0          | 560.0             | 434.0              |
+| 1st Qu.       |  209.0         | 880.0             | 654.5              |
+| Median        |  407.0         | 965.0             | 801.0              |
+| Mean          |  374.9         | 957.8             | 780.1              |
+| 3rd Qu.       |  490.8         | 1082.5            | 912.0              |
+| Max           |  708.0         | 1250.0            | 1136.0             |
+| SD            |  165.0         | 161.4             | 172.5              |
+
+*Table 2 : Numerical univariate analysis of the three predictors : Number of Ale/Beer houses pers 100k, Public school attendants per 10k and Public worship attendants per 2k*
+
+```{r library, include=FALSE}
+library(packHV)
 ```
 
-While the mean is very sensitive to outliers, the median is not. Thus by comparing the two, we can have insights on the presence of outliers. We can observe that the mean and the median are quite similar relative to the spread for all three numerical features, infering against the presence of outliers. In order to have a visual summary of the distributions, boxplot of the predictors are shown in Figure 1. They appear to be quite symmetric, while being slightly left-skewed for the Beer Houses, and the Worship attendants and slightly right-skewed for the Public School attendants. 
 
-```{r boxplots2, echo=FALSE}
-library(packHV)
-layout(matrix(c(1, 1, 2), nrow = 1), widths = c(1.25, 1))
+```{r boxplots2, echo=FALSE, fig.height = 4.5, fig.width = 8, fig.align = "center"}
+layout(matrix(c(1, 1, 2), nrow = 1), widths = c(1, 0.75))
 
 # Creating a single boxplot with different colors for each feature
 boxplot(ale_beer_houses_per_100k, 
         attendants_public_school_per_10k, 
         attendants_public_worship_per_2k, 
-        main = "Comparison of Various Features per County",
-        names = c("Beer Houses", "School Attendants", "Worship Attendants"),
-        ylab = "Count per 100k")
-hist_boxplot(criminals_per_100k, breaks=20, ymax=6)
+        main = "Summary of Predictors' distribution",
+        names = c("Beer Houses /100k", "School attendants /10k", "Worship attendants /2k"),
+        ylab = "Count")
+hist_boxplot(criminals_per_100k, breaks=20, ymax=6, main="Variable of insterest Histogram")
 ```
+*Figure 1 : Univariate graphical analysis of numerical variables. On the left, boxplots of the three predictors : Number of Ale/Beer houses per 100k, Public school attendants per 10k and Public worship attendants pers 2k. On the right, histogram and boxplot of the variable of interest : the number of criminals per 100k*
 
-Next, to better visualize the response variable of interest, i.e. the number of criminals per county per 100k, we plotted its distribution with a histogran and a boxplot in Figure 2 which is slightly left skewed. For a first naive comparison of its distribution across regions, we displayed seperate boxplots for each region in Figure 3. We could observe clear differences between the number of criminals' median and us ordered them in ascending order. As we can hypothesize a statistical difference between region 8 (corresponding to "Northern") which as a median number of criminals lower than 100, and region 4 (corresponding to West Midland) which has a median number of criminal higher than 200, we compared the predictor's distribution of those 2 regions in Figure 4.
+
+Next, to better visualize the response variable of interest, i.e. the number of criminals per county per 100k, we plotted its distribution with a histogram and a boxplot in Figure 2 which is slightly left skewed. For a first naive comparison of its distribution across regions, we displayed seperate boxplots for each region in Figure 3. We could observe clear differences between the number of criminals' median. Thus we ordered them in ascending order. As we can hypothesize a statistical difference between region 8 (corresponding to "Northern") which as a median number of criminals lower than 100, and region 4 (corresponding to West Midland) which has a median number of criminal higher than 200, we compared the predictor's distribution of those 2 regions in Figure 4. As the distributions showed a net higher number of Ale/Beer Houses and a higher number of Worship attendants in region 4 compared to region 8, we could naively hypothesize that those two predictors might appear to be positively correlated with the number of criminals in the next part of our analysis.
 
 
-```{r bivariate boxplot, echo=FALSE}
+```{r bivariate boxplot, echo=FALSE, fig.height = 5, fig.width = 8, fig.align = "center"}
 factor_colors <- c("red", "cyan", "magenta", "orange", "purple", "yellow", "pink", "green", "blue")
 
 # Order region codes by median value
@@ -107,26 +131,30 @@ ordered_region <- names(sort(tapply(criminals_per_100k, region_code, median)))
 
 # Create boxplots ordered by median
 boxplot(criminals_per_100k ~ factor(region_code, levels = ordered_region), 
-        main = "Criminals per 100k by Region Code",
+        #main = "Criminals per 100k by Region Code",
         col = factor_colors,
         xlab = "Region Code",
         ylab = "Criminals per 100k")
+        #cex.axis = 0.5, # Adjusting the size of axis labels
+        #cex.lab = 0.5) # Adjusting the size of axis titles))
 
 ```
-```{r dist,echo=FALSE}
+*Figure 2 : Number of criminals per 100k by Region code. Colors of the region code remain the same for the whole analysis*
+
+```{r dist,echo=FALSE, fig.height = 3, fig.width = 6, fig.align = "center"}
 factor_colors <- c("blue", "red")
 subset_data <- data[data$region_code %in% c(factor("4"), factor("8")), ]
 subset_data$region_code <- factor(subset_data$region_code, levels = c(factor("4"), factor("8")))
 
 par(mfrow=c(1,3))
-boxplot(subset_data$ale_beer_houses_per_100k ~ subset_data$region_code, main = "", col = factor_colors, xlab="Region code")
-boxplot(subset_data$attendants_public_school_per_10k ~ subset_data$region_code, main = "", col = factor_colors, xlab = "Region code")
-boxplot(subset_data$attendants_public_worship_per_2k ~ subset_data$region_code, main = "", col = factor_colors, xlab ="Region code")
+boxplot(subset_data$ale_beer_houses_per_100k ~ subset_data$region_code, main = "", col = factor_colors, xlab="Region code", ylab="Ale/Beer Houses per 100k")
+boxplot(subset_data$attendants_public_school_per_10k ~ subset_data$region_code, main = "", col = factor_colors, xlab = "Region code", ylab="Public Schhol attendants per 10k")
+boxplot(subset_data$attendants_public_worship_per_2k ~ subset_data$region_code, main = "", col = factor_colors, xlab ="Region code", ylab="Public Worship attendants per 2k")
 ```
-
+*Figure 3: Number of Ale/Beer Houses per 100k, Public School attendants per 10k and Public Worship attendants per 2k (The three predictors) for Region Codes 4 and 8.*
 
 ```{r correlation3, echo=FALSE, warning=FALSE}
-factor_colors <- c("pink", "purple", "yellow", "orange", "blue", "magenta", "green", "cyan", "red")
+factor_colors <- c("purple", "yellow", "orange", "blue", "magenta", "green", "cyan", "red", "pink")
 # Customize upper panel
 upper.panel<-function(x, y){
   points(x,y, pch=19, col=factor_colors[data$region_code])
@@ -140,6 +168,11 @@ pairs(data[,5:7], lower.panel = NULL,
       upper.panel = upper.panel)
 
 ```
+*Figure 4: Pairwise correlation plot between the three predictors : Ale/Beer Houses per 100k, Public school attendants per 10k and Public worship attendants per 2k. Pearson correlation coefficients are computed independently of the region code. Colors correspond to region codes as in Figure 2.*
+
+To better visualize how the predictors are inter-related, we presented them in a pairwise correlation plot, shown in Figure 4 and pearson correlation coefficients were computed independently of the region code. We could notice a positive correlation between Public School attendants and Public Worship attendants which may indicate the necessity of removing one of the two in the following linear models in order to have a good balance between model accuracy and model simplicity.
+
+
 ```{r test, include=FALSE}
 
 plot(criminals_per_100k~attendants_public_worship_per_2k)
@@ -159,7 +192,7 @@ In the following, we will first look at the model prediction based on these 3 va
 |$\beta_{0}$       |    Ale/Beer Houses per 100k             |
 |$\beta_{1}$       |    Attendants at public school per 10k  |   
 |$\beta_{2}$       |    Attendants at public worship per 2k  |
-*Table XXXXXXXXXXXXXXXXXXXXXXX : Summary of variable names *
+*Table 3 : Summary of variable names *
 
 **Model 1: ** \
 $Y = 172.88 + 0.12\beta_{0} + 0.10\beta_{1} + 0.039\beta_{2}$ \ 
@@ -197,12 +230,31 @@ This model gives a $R_{adj}^{2}$ of 0.15 and an AIC of 414.22 . Since both the $
 | Model 4   |  0.1936       | 406.7524  |
 | Model 5   |  0.1533       | 414.2217  |
 
-*Table XXXXXXXXXXXXXXXXXXXXXXX : Summary of the $R_{adj}^{2}$ and AIC for each model considered *
+*Table 4 : Summary of the $R_{adj}^{2}$ and AIC for each model considered *
 
-# Model selection
+# Model selection and Model Assessment
 In the last section, we computed different models to determine which one is better. We saw that model 1 and model 2 gave us very close results when looking at R squared adjusted, however, looking at AIC values, we can see that model 2 has a lower one and we therefore decided to consider model 2 as our best model.
 The final model selected is $Y = 178.81 + 0.13\beta_{0} -0.077\beta_{1}$ (model2)
 
-# Discussion
+However before accepting our model, it is essential to verify that model assumptions hold. These include uncorrelated, homeoscedastic, normally distributed erros with mean 0. By looking at the diagnostic plots, especially the residuals vs fitted plot, we could observe that the mean of the residuals is slightly below 0 and not perfectly homeoscedastic with 3 points having a high residual value : Points 23, 24 and 34. Furthermore, the QQ-normal plot of residuals showed approximately normally distributed errors with a slight long tail on the right and three serious under-predictions corresponding to the previously mentionned points. Colors of the different regions were displayed on the plots in order to see if those specific points belong to a particular region. It appeared that most of the points of the right long tail including points 23 and 24 belong to the region of West Midland (region code 4) which has a particular high number of criminals (see EDA). In the same way, point 34 belongs to the region of North Western (region code 6) which is the second region with the highest number of residuals. As a result, we could hypothesize that the peculiar number of criminals in those two regions might not fully explained by our model. 
+Other diagnostic plots on the presence of influential points were also visualized although not displayed here and no specific outliers were found although point 24 of West Midland appeared to be the most influential one.
+
+
+```{r diagnostics, echo=FALSE, fig.height = 4, fig.width = 6, fig.align = "center"}
+# Define model
+model2 <- lm(formula = criminals_per_100k ~ ale_beer_houses_per_100k + attendants_public_school_per_10k, data =data)
+
+par(mfrow=c(1,2))
+plot(model2, which = 1, col=factor_colors[region_code]) 
+plot(model2, which = 2, col=factor_colors[region_code])
+```
+*Figure 5: Diagnostic plots of model 2 $Y = 178.81 + 0.13\beta_{0} -0.077\beta_{1}$. On the left is the Residuals vs Fitted plot. On the right, is the QQ-normal plot of residuals. Colors correspond to region codes as in Figure 2.*
+
+```{r outliers, include=FALSE}
+# Define model
+par(mfrow=c(1,2))
+plot(model2, which = 4, col=factor_colors[region_code]) 
+plot(model2, which = 5, col=factor_colors[region_code])
+```
 
 # Conclusion
