--- a/Report.Rmd
+++ b/Report.Rmd
@@ -34,7 +34,7 @@ data$region_name <- as.factor(data$region_name)
 attach(data)
 ```
 
-To start our data exploration, we first performed a univariate data analysis of the predictors and of the response variable of interest, the number of criminals per 100k per county. We have 3 numerical features : the number of ale and beer houses per 100k per county, the number of public school attendants per 10k per county, and the number of public worship attendants per 2k per county, and 3 categorical features : the county names, the region names and the region codes. By looking closely ar the data, we noticed that each sample corresponded to a different county name and thus we ignored this last feature for the rest of our analysis. We also remarked that each region name corresponded to a region code, except for "South Midland" which had the same region code as "South Eastern", thus we replaced the region_code "1" of "South Eastern" to factor "0". Occurrences of categorical features are indicated in Table 1. 
+To start our data exploration, we first performed a univariate data analysis of the predictors and of the response variable of interest, the number of criminals per 100k per county. We have 3 numerical features : the number of ale and beer houses per 100k per county, the number of public school attendants per 10k per county, and the number of public worship attendants per 2k per county, and 3 categorical features : the county names, the region names and the region codes. By looking closely ar the data, we noticed that each sample corresponded to a different county name and thus we ignored this last feature for the rest of our analysis. We also remarked that each region name corresponded to a region code, except for South Midland which had the same region code as South Eastern, thus we replaced the region_code "1" of South Eastern to factor "0". Occurrences of categorical features are indicated in Table 1. 
 
 Regarding the three numerical predictors, we first computed metrics which informed us on the center of their distribution (the mean and the median), and its spread (with the minimum and maximum value, the lower percentile 25 and the upper percentile 75 as well as the standard deviations), all of which are displayed in Table 2. While the mean is very sensitive to outliers, the median is not, and thus by comparing the two we get insights into the presence of outliers. We can observe that the mean and the median are quite similar relative to the spread for all three numerical features, hinting at the absence of outliers. In order to have a visual summary of the distributions, boxplots of the predictors are shown in Figure 1. They appear to be quite symmetric, although they are slightly left-skewed for the ale and beer houses and the worship attendants, and slightly right-skewed for the public school attendants. 
 
@@ -127,7 +127,7 @@ hist_boxplot(criminals_per_100k, breaks=20, ymax=6, main="Variable of insterest 
 *Figure 1 : Univariate graphical analysis of numerical variables. On the left, boxplots of the three predictors : Number of Ale/Beer houses per 100k, Public school attendants per 10k and Public worship attendants pers 2k. On the right, histogram and boxplot of the variable of interest : the number of criminals per 100k*
 
 
-Next, to better visualize the response variable of interest, i.e. the number of criminals per county per 100k, we plotted its distribution with a histogram and a boxplot in Figure 2 which is slightly left skewed. For a first naive comparison of its distribution across regions, we displayed separate boxplots for each region in Figure 3. We can observe clear differences between the number of criminals' medians, and thus we ordered them in ascending order. As we can hypothesize a statistical difference between region 8 (corresponding to "Northern") which as a median number of criminals lower than 100, and region 4 (corresponding to West Midland) which has a median number of criminal higher than 200, we compared the predictor's distribution of those 2 regions in Figure 4. As the distributions showed a net higher number of Ale/Beer Houses and a higher number of Worship attendants in region 4 compared to region 8, we could naively hypothesize that those two predictors might appear to be positively correlated with the number of criminals in the next part of our analysis.
+Next, to better visualize the response variable of interest, i.e. the number of criminals per county per 100k, we plotted its distribution with a histogram and a boxplot in Figure 2 which is slightly left skewed. For a first naive comparison of its distribution across regions, we displayed separate boxplots for each region in Figure 3. We can observe clear differences between the number of criminals' medians, and thus we ordered them in ascending order. As we can hypothesize a statistical difference between region 8 (corresponding to Northern) which as a median number of criminals lower than 100, and region 4 (corresponding to West Midland) which has a median number of criminal higher than 200, we compared the predictor's distribution of those 2 regions in Figure 4. As the distributions showed a net higher number of Ale/Beer Houses and a higher number of Worship attendants in region 4 compared to region 8, we could naively hypothesize that those two predictors might appear to be positively correlated with the number of criminals in the next part of our analysis.
 
 
 ```{r bivariate boxplot, echo=FALSE, fig.height = 5, fig.width = 8, fig.align = "center"}
@@ -273,4 +273,4 @@ Comparing the counties with highest and lowest crime rates, we saw that the numb
 
 Furthermore, we noticed that there was a strong positive correlation between the number of people attending public school and the number of people attending public worship, which helped guide our model selection. Indeed, in our final model, we only included the number of beer and ale houses and the number of people attending public school, as the number of people attending public worship did not seem to contribute much to the explanatory power of the model.
 
-In the end, we found that the best model, chosen by considering both the explained variance ($R_{adj}^{2}$) and an information criterion (AIC), was $Y = 178.81 + 0.13\beta_{0} -0.077\beta_{1}$, where Y is the number of criminals per 100k, $\beta_{0}$ is the number of ale and beer houses per 100k and $\beta_{1}$ is the number of people attending public school per 10k. This final model indicates that the number of criminals seems to increase as the number of ale and beer houses increases, and decreases as the number of people attending public school increases. This first part is in accordance to the first hypothesis, while the second contradicts the second hypothesis that we made during exploratory data analysis. The reason for this is of course that our hypotheses were based on data from two particular counties only, while the final model considers all of them, reminding us of the importance of basing our generalized results on data from the whole population.
+In the end, we found that the best model, chosen by considering both the explained variance ($R_{adj}^{2}$) and an information criterion (AIC), was $Y = 178.81 + 0.13\beta_{0} -0.077\beta_{1}$, where Y is the number of criminals per 100k, $\beta_{0}$ is the number of ale and beer houses per 100k and $\beta_{1}$ is the number of people attending public school per 10k. This final model indicates that the number of criminals seems to increase as the number of ale and beer houses increases, and decreases as the number of people attending public school increases. This first part is in accordance to the first hypothesis, while the second contradicts the second hypothesis that we made during exploratory data analysis. The reason for this is of course that our hypotheses were based on data from two particular counties only, while the final model considers all of them, reminding us of the importance of basing our generalized results on data from the whole population. Finally, we saw that the model assumptions were not perfectly met for some of the counties' data (West Midland, North Western), and that the model was therefore maybe not the best to explain the number of criminals in those counties.
